<resources>
    <string name="app_name">DogApp</string>
    <string name="tituloInventario">Inventario</string>
    <string name="desc_imagen_mascota">Descripción de la imagen de la mascota</string>
    <string name="hint_pet_name">Nombre de la Mascota</string>
    <string name="hint_breed">Raza</string>
    <string name="hint_owner">Nombre del Propietario</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_symptoms">Síntomas</string>
    <string name="save_appointment">Guardar Cita</string>
    <string name="title_cita">Nueva Cita</string>
    <string name="title_editar_cita">Editar Cita</string>
    <string name="save_changes">Editar Cita</string>
    <string name="back_button_description">Volver</string>
    <string name="owner_label">Propietario: %1$s</string>
    <string name="phone_label">Teléfono: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fingerprint_dialog_touch_sensor">Toque el sensor de huella digital</string>
    <string name="fingerprint_dialog_title">Autenticación con Biometría</string>
    <string name="fingerprint_dialog_subtitle">Ingrese su huella digital</string>
    <string name="fingerprint_dialog_negative_button">Cancelar</string>
</resources>